--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+
+
+    <color name="casee">#FFBD4C</color>
+    <color name="deal">#FF5959</color>
+    <color name="recover">#4CD97B</color>
+    <color name="active">#4CB5FF</color>
+    <color name="serious">#8359FF</color>
+
 </resources>
