--- a/app/src/main/res/layout/fragment_tracking.xml
+++ b/app/src/main/res/layout/fragment_tracking.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:fillViewport="false">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -83,24 +83,35 @@
                     app:cardCornerRadius="10dp">
 
                     <TextView
+                        android:id="@+id/tvaffected"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top|center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="Cases"
+                        android:text="352"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
 
                     <TextView
-                        android:id="@+id/tvaffected"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="10000"
+                        android:text="Nhiễm Bệnh"
+                        android:textColor="#fff"
+                        android:textSize="20dp"
+                        android:textStyle="bold"></TextView>
+                    <TextView
+                        android:id="@+id/tvaffectedDaily"
+                        android:layout_width="170dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/custom_textview_case"
+                        android:layout_gravity="bottom|center"
+                        android:gravity="center"
+                        android:text="+ 3"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -122,24 +133,35 @@
                     app:cardCornerRadius="10dp">
 
                     <TextView
+                        android:id="@+id/tvdeath"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top|center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="Death"
+                        android:text="0"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
 
                     <TextView
-                        android:id="@+id/tvdeath"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="100000"
+                        android:text="Chết"
+                        android:textColor="#fff"
+                        android:textSize="20dp"
+                        android:textStyle="bold"></TextView>
+                    <TextView
+                        android:id="@+id/tvdeathDaily"
+                        android:layout_width="175dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/custom_textview_death"
+                        android:layout_gravity="bottom|center"
+                        android:gravity="center"
+                        android:text="+ 0"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -179,24 +201,35 @@
                     app:cardCornerRadius="10dp">
 
                     <TextView
+                        android:id="@+id/tvrecovered"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top|center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="Recovered"
+                        android:text="300"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
 
                     <TextView
-                        android:id="@+id/tvrecovered"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="10000"
+                        android:text="Hồi phục"
+                        android:textColor="#fff"
+                        android:textSize="20dp"
+                        android:textStyle="bold"></TextView>
+                    <TextView
+                        android:id="@+id/tvrecoveredDaily"
+                        android:layout_width="115dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/custom_textview_recovered"
+                        android:layout_gravity="bottom|center"
+                        android:gravity="center"
+                        android:text="+ 20"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -219,24 +252,36 @@
                     app:cardCornerRadius="10dp">
 
                     <TextView
+                        android:id="@+id/tvactive"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top|center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="Active"
+                        android:text="32"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
 
                     <TextView
-                        android:id="@+id/tvactive"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="10000"
+                        android:text="Đang nhiễm"
+                        android:textColor="#fff"
+                        android:textSize="20dp"
+                        android:textStyle="bold"></TextView>
+                    <TextView
+                        android:id="@+id/tvactiveDaily"
+                        android:layout_width="115dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/custom_textview_active"
+                        android:layout_gravity="bottom|center"
+                        android:gravity="center"
+                        android:text="+ 0"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -258,27 +303,38 @@
                     app:cardCornerRadius="10dp">
 
                     <TextView
+                        android:id="@+id/tvserious"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top|center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="Serious"
+                        android:text="1"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
 
                     <TextView
-                        android:id="@+id/tvserious"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="10000"
+                        android:text="Nguy hiểm"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/tvseriousDaily"
+                        android:layout_width="115dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/custom_textview_serious"
+                        android:layout_gravity="bottom|center"
+                        android:gravity="center"
+                        android:text="+ 0"
+                        android:textColor="#fff"
+                        android:textSize="20dp"
+                        android:textStyle="bold"></TextView>
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
