--- a/app/src/main/res/drawable/track.xml
+++ b/app/src/main/res/drawable/track.xml
@@ -2,14 +2,14 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:width="350dp"
-       android:height="5mm"
+       android:height="7mm"
        >
       <shape android:shape="rectangle">
          <corners android:radius="3.7mm" />
          <stroke
-             android:width="0.3mm"
-             android:color="@color/colorPrimary" />
-         <solid android:color="@color/colorPrimaryDark" />
+             android:width="0mm"
+              />
+         <solid android:color="#DEDEDE" />
       </shape>
    </item>
 </layer-list>
