--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="16dp"
     android:orientation="horizontal">
 
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:gravity="end"
+        android:gravity="center"
         android:textAllCaps="true"
         android:textStyle="bold" />
     <TextView
@@ -31,7 +31,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:gravity="end"
+        android:gravity="center"
         android:textAllCaps="true"
         android:textStyle="bold" />
     <TextView
@@ -40,7 +40,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:gravity="end"
+        android:gravity="center"
         android:textAllCaps="true"
         android:textStyle="bold" />
     <TextView
@@ -49,7 +49,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:gravity="end"
+        android:gravity="center"
         android:textAllCaps="true"
         android:textStyle="bold" />
 
