--- a/app/src/main/res/drawable/custom_textview_case.xml
+++ b/app/src/main/res/drawable/custom_textview_case.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
     <!-- Set màu nền-->
     <solid
-        android:color="#FF9900" >
+        android:color="#EDBC0A" >
     </solid>
 
     <!-- đặt thuộc tính màu và độ rộng của đường viền -->
