--- a/app/src/main/res/drawable/custom_textview_death.xml
+++ b/app/src/main/res/drawable/custom_textview_death.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
     <!-- Set màu nền-->
     <solid
-        android:color="#B22222" >
+        android:color="#C93D3C" >
     </solid>
 
     <!-- đặt thuộc tính màu và độ rộng của đường viền -->
