--- a/app/src/main/res/layout/fragment_tracking.xml
+++ b/app/src/main/res/layout/fragment_tracking.xml
@@ -34,7 +34,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:paddingTop="10dp"
-            android:text="Statistics"
+            android:text="Thông tin dịch bệnh"
             android:textSize="30dp"
             android:textStyle="bold"></TextView>
 
@@ -76,7 +76,7 @@
                     android:layout_width="170dp"
                     android:layout_height="100dp"
                     android:background="@drawable/botronlinearlayout"
-                    android:backgroundTint="#FFBD4C"
+                    android:backgroundTint="#FAF0CD"
                     android:orientation="horizontal"
                     android:padding="10dp"
                     app:cardCornerRadius="10dp">
@@ -89,7 +89,7 @@
                         android:gravity="center"
                         android:paddingTop="10dp"
                         android:text="352"
-                        android:textColor="#fff"
+                        android:textColor="#EDBC0A"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
 
@@ -100,9 +100,9 @@
                         android:gravity="center"
                         android:paddingTop="10dp"
                         android:text="Nhiễm Bệnh"
-                        android:textColor="#fff"
+                        android:textColor="#000"
                         android:textSize="20dp"
-                        android:textStyle="bold"></TextView>
+                        ></TextView>
                     <TextView
                         android:id="@+id/tvaffectedDaily"
                         android:layout_width="170dp"
@@ -113,7 +113,9 @@
                         android:text="+ "
                         android:textColor="#fff"
                         android:textSize="20dp"
-                        android:textStyle="bold"></TextView>
+                        android:textStyle="bold">
+                    </TextView>
+
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
 
@@ -126,7 +128,7 @@
                     android:layout_width="175dp"
                     android:layout_height="100dp"
                     android:background="@drawable/botronlinearlayout"
-                    android:backgroundTint="#E35359"
+                    android:backgroundTint="#FAD3D6"
                     android:orientation="horizontal"
                     android:padding="10dp"
                     app:cardCornerRadius="10dp">
@@ -139,7 +141,7 @@
                         android:gravity="center"
                         android:paddingTop="10dp"
                         android:text="0"
-                        android:textColor="#fff"
+                        android:textColor="#C93D3C"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
 
@@ -150,9 +152,9 @@
                         android:gravity="center"
                         android:paddingTop="10dp"
                         android:text="Chết"
-                        android:textColor="#fff"
+                        android:textColor="#000"
                         android:textSize="20dp"
-                        android:textStyle="bold"></TextView>
+                        ></TextView>
                     <TextView
                         android:id="@+id/tvdeathDaily"
                         android:layout_width="175dp"
@@ -194,7 +196,7 @@
                     android:layout_width="115dp"
                     android:layout_height="100dp"
                     android:background="@drawable/botronlinearlayout"
-                    android:backgroundTint="#4CD97B"
+                    android:backgroundTint="#E0E7D7"
                     android:orientation="horizontal"
                     android:padding="10dp"
                     app:cardCornerRadius="10dp">
@@ -207,7 +209,7 @@
                         android:gravity="center"
                         android:paddingTop="10dp"
                         android:text="300"
-                        android:textColor="#fff"
+                        android:textColor="#6C912A"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
 
@@ -218,9 +220,9 @@
                         android:gravity="center"
                         android:paddingTop="10dp"
                         android:text="Hồi phục"
-                        android:textColor="#fff"
+                        android:textColor="#000"
                         android:textSize="20dp"
-                        android:textStyle="bold"></TextView>
+                        ></TextView>
                     <TextView
                         android:id="@+id/tvrecoveredDaily"
                         android:layout_width="115dp"
@@ -245,7 +247,7 @@
                     android:layout_width="115dp"
                     android:layout_height="100dp"
                     android:background="@drawable/botronlinearlayout"
-                    android:backgroundTint="#4CB5FF"
+                    android:backgroundTint="#D0E7F6"
                     android:orientation="horizontal"
                     android:padding="10dp"
                     app:cardCornerRadius="10dp">
@@ -258,7 +260,7 @@
                         android:gravity="center"
                         android:paddingTop="10dp"
                         android:text="32"
-                        android:textColor="#fff"
+                        android:textColor="#4169E2"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
 
@@ -270,9 +272,9 @@
                         android:gravity="center"
                         android:paddingTop="10dp"
                         android:text="Đang nhiễm"
-                        android:textColor="#fff"
+                        android:textColor="#000"
                         android:textSize="20dp"
-                        android:textStyle="bold"></TextView>
+                        ></TextView>
                     <TextView
                         android:id="@+id/tvactiveDaily"
                         android:layout_width="115dp"
@@ -296,7 +298,7 @@
                     android:layout_width="110dp"
                     android:layout_height="100dp"
                     android:background="@drawable/botronlinearlayout"
-                    android:backgroundTint="#8359FF"
+                    android:backgroundTint="#E8C4EA"
                     android:orientation="horizontal"
                     android:paddingLeft="10dp"
                     app:cardCornerRadius="10dp">
@@ -309,7 +311,7 @@
                         android:gravity="center"
                         android:paddingTop="10dp"
                         android:text="1"
-                        android:textColor="#fff"
+                        android:textColor="#65008C"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
 
@@ -320,9 +322,9 @@
                         android:gravity="center"
                         android:paddingTop="10dp"
                         android:text="Nguy hiểm"
-                        android:textColor="#fff"
+                        android:textColor="#000"
                         android:textSize="20dp"
-                        android:textStyle="bold" />
+                        />
                     <TextView
                         android:id="@+id/tvseriousDaily"
                         android:layout_width="115dp"
@@ -333,7 +335,8 @@
                         android:text="+ "
                         android:textColor="#fff"
                         android:textSize="20dp"
-                        android:textStyle="bold"></TextView>
+                        android:textStyle="bold"
+                        ></TextView>
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
@@ -390,7 +393,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Recovered"
+                        android:text="Hồi phục"
                         android:paddingLeft="10dp"/>
 
                 </LinearLayout>
@@ -406,7 +409,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Active"
+                        android:text="Đang nhiễm"
                         android:paddingLeft="10dp"/>
 
                 </LinearLayout>
@@ -422,7 +425,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Deaths"
+                        android:text="Chết"
                         android:paddingLeft="10dp"/>
 
                 </LinearLayout>
@@ -438,29 +441,36 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Critical"
+                        android:text="Nguy hiểm"
                         android:paddingLeft="10dp"/>
 
                 </LinearLayout>
             </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
         <Button
             android:id="@+id/btnTrack"
-            android:layout_width="match_parent"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
             android:layout_below="@+id/cardView"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="34dp"
+            android:layout_marginLeft="34dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="27dp"
+            android:layout_marginRight="27dp"
+            android:layout_marginBottom="20dp"
             android:background="@color/color_one"
-            android:text="Track countries"
+            android:onClick="goTrackCountries"
+            android:text="Các quốc gia khác"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:padding="5dp"
-            android:onClick="goTrackCountries" />
+            android:textSize="18sp" />
+
         <TextView
             android:id="@+id/daily_case"
             android:layout_width="229dp"
@@ -475,7 +485,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="148dp"
             android:layout_marginRight="148dp"
-            android:text="Daily New Cases"
+            android:text="Biểu đồ thống kê"
             android:textSize="25dp"
             android:textStyle="bold"></TextView>
 
