--- a/app/src/main/res/layout/activity_affected_countries.xml
+++ b/app/src/main/res/layout/activity_affected_countries.xml
@@ -19,12 +19,15 @@
         android:drawablePadding="15dp"
         android:background="@drawable/edittext_shadow"
         android:drawableLeft="@drawable/ic_search_black_24dp"/>
+
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
         android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/edtSearch"
-        android:layout_margin="10dp"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp" />
+
     <com.leo.simplearcloader.SimpleArcLoader
         android:layout_width="60dp"
         android:layout_height="60dp"
