update map by Thinh

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary2">#171e24</color>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
@@ -29,5 +30,12 @@
     <color name="cases">#FFA726</color>
     <color name="recovered">#6C912A</color>
     <color name="deaths">#C93D3C</color>
+    <color name="backgrond_">#1c2a35</color>
+    <color name="white">#fff</color>
+    <color name="selectbackground">#58bfe8</color>
+    <color name="green">#00C853</color>
+    <color name="briterad">#ED3531</color>
+    <color name="cardblack">#1c2a35</color>
+    <color name="red">#C83900</color>
 <!--    <color name="active">#29B6F6</color>-->
 </resources>
