--- a/app/src/main/res/layout/list_custom_item.xml
+++ b/app/src/main/res/layout/list_custom_item.xml
@@ -166,7 +166,7 @@
             android:layout_marginLeft="0dp"
             android:layout_marginBottom="0dp"
             android:gravity="center"
-            android:text="Affected"
+            android:text="Đang nhiễm"
             android:textSize="15dp"
             android:textColor="@color/dark_yellow"
              />
@@ -183,7 +183,7 @@
             android:layout_toEndOf="@+id/affectedtg"
             android:layout_toRightOf="@+id/affectedtg"
             android:gravity="center"
-            android:text="Recovered"
+            android:text="Hồi phục"
             android:textColor="@color/dark_green"
             android:textSize="15dp"
 
@@ -205,7 +205,7 @@
                 android:layout_toEndOf="@+id/recoveTg"
                 android:layout_toRightOf="@+id/recoveTg"
                 android:gravity="center"
-                android:text="Dealth"
+                android:text="Chết"
                 android:textColor="@color/dark_red"
                 android:textSize="15dp" />
 
