--- a/app/src/main/res/layout/activity_affected_countries.xml
+++ b/app/src/main/res/layout/activity_affected_countries.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_two"
+    android:background="@color/white"
     tools:context=".AffectedCountries">
     <EditText
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/edtSearch"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="0dp"
         android:layout_marginBottom="10dp" />
 
     <com.leo.simplearcloader.SimpleArcLoader
