--- a/app/src/main/res/layout/fragment_tracking.xml
+++ b/app/src/main/res/layout/fragment_tracking.xml
@@ -39,7 +39,7 @@
             android:textStyle="bold"></TextView>
 
         <ImageButton
-            android:id="@+id/now_btn_notify"
+            android:id="@+id/btnreload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#fff"
@@ -88,7 +88,7 @@
                         android:layout_gravity="top|center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="352"
+                        android:text="0"
                         android:textColor="#EDBC0A"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -208,7 +208,7 @@
                         android:layout_gravity="top|center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="300"
+                        android:text="0"
                         android:textColor="#6C912A"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -259,7 +259,7 @@
                         android:layout_gravity="top|center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="32"
+                        android:text="0"
                         android:textColor="#4169E2"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -310,7 +310,7 @@
                         android:layout_gravity="top|center"
                         android:gravity="center"
                         android:paddingTop="10dp"
-                        android:text="1"
+                        android:text="0"
                         android:textColor="#65008C"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -458,7 +458,6 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
             android:layout_marginStart="34dp"
             android:layout_marginLeft="34dp"
             android:layout_marginTop="10dp"
@@ -473,7 +472,7 @@
 
         <TextView
             android:id="@+id/daily_case"
-            android:layout_width="229dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/show_case"
             android:layout_alignParentStart="true"
