--- a/app/src/main/res/layout/list_custom_item.xml
+++ b/app/src/main/res/layout/list_custom_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@color/color_white"
+    android:background="@color/white"
     android:orientation="vertical"
     >
 
