update call and send sms fragment info

--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -42,7 +42,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:lineSpacingExtra="4sp"
-            android:text="If you feel sick with any covid-19 symptoms \n please call ur or SMS for immediate help."
+            android:text="Nếu bạn cảm thấy bị bệnh với bất kỳ triệu chứng covid-19\nvui lòng gọi cho bạn hoặc SMS để được giúp đỡ ngay lập tức."
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -54,7 +54,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="44dp"
-            android:text="Are you feeling sick?"
+            android:text="Bạn có cảm thấy như bị bệnh không?"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +105,7 @@
             android:layout_marginStart="28dp"
             android:layout_marginLeft="28dp"
             android:layout_marginTop="80dp"
-            android:text="Sympstomps"
+            android:text="Triệu chứng bệnh"
             android:textColor="#1E1010"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal"
-            android:text="Caugh"
+            android:text="Ho, đau họng"
             android:textAlignment="center"
             android:textColor="@android:color/background_dark"
             app:layout_constraintEnd_toEndOf="@+id/imageView7"
@@ -149,7 +149,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal"
-            android:text="Fever"
+            android:text="Sốt cao"
             android:textAlignment="center"
             android:textColor="@android:color/background_dark"
             app:layout_constraintEnd_toEndOf="@+id/imageView8"
@@ -172,7 +172,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal"
-            android:text="Headache"
+            android:text="Đau đầu"
             android:textAlignment="center"
             android:textColor="@android:color/background_dark"
             app:layout_constraintEnd_toEndOf="@+id/imageView9"
@@ -187,7 +187,7 @@
             android:layout_marginStart="28dp"
             android:layout_marginLeft="28dp"
             android:layout_marginTop="250dp"
-            android:text="Prevention"
+            android:text="Hướng dẫn phòng bệnh"
             android:textColor="#1E1010"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -232,7 +232,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal"
-            android:text="Avoid close \n contact"
+            android:text="Tránh tiếp xúc\n gần với bệnh nhân"
             android:textAlignment="center"
             android:textColor="@android:color/background_dark"
             app:layout_constraintEnd_toEndOf="@+id/imageView4"
@@ -245,7 +245,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal"
-            android:text="Clean your\n hands often"
+            android:text="Rửa tay\n thường xuyên"
             android:textAlignment="center"
             android:textColor="@android:color/background_dark"
             app:layout_constraintEnd_toEndOf="@+id/imageView5"
@@ -257,7 +257,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal"
-            android:text="Wear a \n face mask"
+            android:text="Đeo khẩu trang\n nơi công cộng"
             android:textAlignment="center"
             android:textColor="@android:color/background_dark"
             app:layout_constraintEnd_toEndOf="@+id/imageView6"
